--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app='myApp'>
 <head>
     <meta charset="UTF-8">
     <title>WaitStaff Application</title>
@@ -8,7 +8,48 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body ng-controller='main'>
+  <h1 class='main-title'>Waitstaff Calculator</h1>
+  <div class='row'>
+  <div class='col-6 meal-detail'>
+    <div class='banner'>
+      <h3>Enter the Meal Details</h3>
+    </div>
+    <div class='container'>
+      <form class='meal-detail' name='meal-detail'>
+        <label for='basemeal'>Base Meal Price:</label>
+        <input type='text'></input>
+        <label for='taxrate'>Tax Rate %:</label>
+        <input type='text'></input>
+        <label for='tippercentage'>Tip Percentage %:</label>
+        <input type='text'></input>
+        <input class='buttons' type='button' value='Submit'></input>
+        <input class='buttons' type='button' value='Cancel'></input>
+      </form>
+    </div>
+  </div>
+  <div class='col-6 customerCharges'>
+    <div class='banner'>
+      <h3>Customer Charges</h3>
+    </div>
+  <div class='container'>
+    <p>Subtotal: </p>
+    <p>Tip: </p>
+    <hr>
+    <p>Total: </p>
+  </div>
+  </div>
+  </div>
+  <div class='row'>
+  <div class='col-6 earningsInfo'>
+    <div class='banner'>
+      <h3>Earnings Info</h3>
+    </div>
+  </div>
+  </div>
+
     <script src="app.js"></script>
+    <link rel='stylesheet' href='main.css'>
+    <link rel='stylesheet' href='grid.css'>
 </body>
 </html>
