--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <input id=three type='text' ng-model=vm.percentage name='tip' required ng-pattern="/^\d+(?:\.\d+)?$/" ></input>
           <span ng-if="myForms.meal.tip.$error.required" class="alert-danger">Tip required</span>
           <span ng-if="myForms.meal.tip.$error.pattern" class="alert-danger">Must be a number</span><br>
-          
+
         <input class='buttons' type='submit' value='Submit'></input>
         <input class='buttons' type='button' value='Cancel'></input>
       </form>
@@ -54,6 +54,12 @@
   <div class='col-6 earningsInfo'>
     <div class='banner'>
       <h3>Earnings Info</h3>
+    </div>
+    <div class='container'>
+      <p>Tip Total: $ {{ vm.totaltips }} </p>
+      <p>Meal Count: {{ vm.customercount }} </p>
+      <hr>
+      <p>Average tip per meal: $ {{ vm.averagetips}} </p>
     </div>
   </div>
   </div>
